[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/world/entity/entities/item/CollectibleItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/entity/entities/item/collectible_items/WeaponCollectible.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3 )

[node name="WeaponCollectible" instance=ExtResource( 1 )]
script = ExtResource( 3 )
collision_mode = 0
__disappear_on_pickup = false

[node name="BodyShape" parent="PlayerDetectionArea" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="2"]
offset = Vector2( 0, -2 )

[node name="LifeTimer" parent="." index="3"]
wait_time = 20.0

[node name="PickUpAvailabilityTimer" type="Timer" parent="." index="5"]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="PickUpAvailabilityTimer" to="." method="_on_PickUpAvailabilityTimer_timeout"]
